2022-09-26  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50658 + test: Src/Modules/pcre.c, Test/V07pcre.ztst: Enable to
	switch between C/UTF-8 locales in PCRE

2022-09-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 50648: Functions/Misc/zcalc: Julian Prein: Use ZCALC_HISTFILE
	where defined for zcalc history.

2022-09-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Nicholas Vinson: 50641: aczsh.m4, configure.ac: use 'int main()'
	in test C-codes in configure

2022-09-15  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50629: Test/D07multibyte.ztst, Test/E01options.ztst,
	Test/V07pcre.ztst, Test/X02zlevi.ztst, Test/X03zlebindkey.ztst,
	Test/Y01completion.ztst, Test/ztst.zsh: do not use egrep in tests

2022-08-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_imagemagick: Add *.svg
	and *.webp files.

2022-08-05  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Felipe Contreras: 50435+50436 (+50444):
	Completion/Unix/Command/_make: do not actually build anything.
	Also include some performance improvements.

2022-07-24  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50421: Completion/Zsh/Context/_redirect: add missing context
	as the 1st argument to _dispatch

	* 50418: Src/zsh_system.h, configure.ac: use setenv(3)/getenv(3)
	on newer macOS

2022-07-16  Bart Schaefer  <schaefer@Macadamia>

	* users/27852: Completion/Unix/Command/_python: Make a local copy
	of $_compskip to avoid propagating outward any changes by _normal

2022-06-21  Bart Schaefer  <schaefer@zsh.org>

	* 50379 (tweaked per 50380): Src/jobs.c: fix off-by-one
	side-effect of workers/49906 that broke $(jobs -l)

	* 50368: Src/Modules/db_gdbm.c: adjust bitflags so local copies of
	variables cannot mess with database file contents

2022-06-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 50372: Etc/FAQ.yo: remove redundant references from days of
	Usenet posting.
